@@ -123,6 +123,22 @@ module Spec
   #       @account.balance.should eql(Money.new(0, :dollars))
   #     end
   #   end
+  # 
+  # == Shared behaviour
+  # 
+  # You can define a shared behaviour, that may be used on other behaviours
+  #
+  #  describe "All Editions", :shared => true do
+  #    it "all editions behaviour" ...
+  #  end
+  #
+  #  describe SmallEdition do
+  #    it_should_behave_like "All Editions"
+  #  
+  #    it "should do small edition stuff" do
+  #      ...
+  #    end
+  #  end
   module Runner
     class << self
       def configuration # :nodoc:
